fixed alignment of text

--- a/app/assets/styles/asylum/icons.css
+++ b/app/assets/styles/asylum/icons.css
@@ -51,7 +51,7 @@
   color: #ffffff;
   align-self: center;
   white-space: nowrap;
-  margin: 2px 10px 0px 2px;
+  margin: 1px 10px 0px 2px;
 }
 
 [class^="icon-"]:before,
